@@ -19,6 +19,7 @@
                 <string>portal_type</string>
                 <string>catalog_index</string>
                 <string>relation_setter_id</string>
+                <string>proxy_listbox_ids</string>
               </list>
             </value>
         </item>
@@ -126,6 +127,17 @@
                         <tuple>
                           <string>Pay Sheet Model</string>
                           <string>Pay Sheet Model</string>
+                        </tuple>
+                      </list>
+                    </value>
+                </item>
+                <item>
+                    <key> <string>proxy_listbox_ids</string> </key>
+                    <value>
+                      <list>
+                        <tuple>
+                          <string>PaySheetModelModule_viewPaySheetModelList/listbox</string>
+                          <string>Pay Sheet Models</string>
                         </tuple>
                       </list>
                     </value>
